syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";


service Sports {
  // ListSports returns a list of all sports.
  rpc ListSports(ListSportsRequest) returns (ListSportsResponse) {}
}

/* Requests/Responses */
message ListSportsRequest {
}

// Response to ListSports call.
message ListSportsResponse {
  repeated Sport sports = 1;
}

// A sport resource.
message Sport {
  // ID represents a unique identifier for the sport.
  int64 id = 1;
  // Name is the official name given to the sport.
  string name = 3;
  // Sport type
  enum SportType {
    AFL = 0;
    NRL = 1;
    A_LEAGUE = 2;
    CRICKET = 3;
  }
  SportType sportType = 4;
  // Visible represents whether or not the sport is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the sport is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
}

